cluster/authentik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-route
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`authentik.nathanv.app`) || PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
      middlewares:
        - name: authentik-iframe
          namespace: authentik
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
